# TeIAS-Thesis-Mkt_Adj_Rets

./: README.md  pyproject.toml
src/TeIAS-Thesis-Mkt_Adj_Rets/: a_compute_adj_rets.py  a_main.py  m1_compute_adj_rets.py  m1_gen_firms_cum_rets.py  m1_gen_mkt_cum_rets.py  m2_gen_mkt_adj_rets.py  m2_gen_mkt_cum_rets.py  m2_upload_2_GitHub.py  m3_upload_2_GitHub.py  main.py
